# kindling

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  blacksmith.config.toml  blacksmith.toml  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .taurignore  Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  detect.rs  lib.rs  main.rs  menu.rs
src-tauri/src/commands/: archive.rs  blank_project.rs  crud.rs  detect.rs  export.rs  feedback.rs  fields.rs  import.rs  lock.rs  mod.rs  sample_project.rs  screenplay_project.rs  settings.rs  snapshot.rs  state.rs  sync.rs  tags.rs  templates.rs
src-tauri/src/db/: detect.rs  fields.rs  mod.rs  queries.rs  schema.rs  tags.rs
src-tauri/src/models/: beat.rs  chapter.rs  character.rs  discovery_note.rs  field.rs  location.rs  mod.rs  project.rs  reference_item.rs  scene.rs  scene_reference_state.rs  settings.rs  snapshot.rs  suggestion.rs  tag.rs  template.rs
src-tauri/src/parsers/: longform.rs  markdown.rs  mod.rs  plottr.rs  scrivener.rs  ywriter.rs
src-tauri/templates/: heros-journey.json  save-the-cat.json  seven-point.json  story-circle.json  three-act-structure.json
src-tauri/tests/fixtures/: beats-only.md  chapters-only.md  frontmatter.md  hal_spacejock.yw7  hamlet.md  hamlet.pltr  hamlet.yw7  nested-content.md  paragraph-beats.md  parts_example.yw7  scenes-only.md  special-characters.md
src-tauri/tests/fixtures/hamlet.scriv/: hamlet.scrivx
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-bernardo-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-claudius-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-fortinbras-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-francisco-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-gertrude-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-ghost-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-gravedigger1-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-gravedigger2-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-guildenstern-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-hamlet-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-horatio-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-laertes-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-marcellus-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-ophelia-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-osric-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-player-king-uuid/: synopsis.txt
src-tauri/tests/fixtures/hamlet.scriv/Files/Data/char-polonius-uuid/: synopsis.txt
(+152 files in other folders)
