[package]
name = "kindling"
version = "1.0.0"
description = "Spark your draft - Bridge the gap between outline and prose"
authors = ["Josh Smith"]
edition = "2021"

[lib]
name = "kindling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.39"
encoding_rs = "0.8"
walkdir = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
flate2 = "1"
docx-rs = "0.4"
zip = "2"
serde_yaml = "0.9.34"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2.6"

[dev-dependencies]
tempfile = "3"
